# OEIS

./: .gitignore  .gitmodules  README.md  TODO
A000047/: .gitignore  A000047.cpp  A000047.py  README.md
A000049/: .gitignore  A000049_hash.cpp  A000049_hash_with_queue.cpp  A000049_queue.cpp  A000049_segmented_hash.cpp  README.md  b000049.txt  count_pairs.py
A000050/: A000050_queue.cpp  A000050_segmented_hash.cpp  A000050_signature.cpp  README.md  b000050.txt  b000074.txt
A000067/: .gitignore  A000067_signature.cpp  Makefile  README.md
A000092/: A000092.cpp  A000092.py  A000092_factoring.py  A000099.py  README.md  b000092.txt  b000099.txt  b000223.txt  b000323.txt  b000413.txt  validate.py
A000099/: A000099.py  README.md  b000036.txt  validate.py
A000135/: A000148.py  A000327.py  b000148.txt  b000327.txt
A000205/: A000205_signature.cpp  README.md  b000205.txt
A001235/: README.md  taxicab_hash.cpp  taxicab_queue.cpp
A001476/: A001476.py  b001476.txt
A002071/: .gitignore  A002071  A002071.cpp  A002071_exact.cpp  README.md  cgbn_compute_cf.cu  cgbn_compute_cf.h  cuda.supp  group_primes.py  int128_compute_cf.cu  int128_compute_cf.h  test_gpu.cpp  verify.cpp  verify.hpp
A069675/: .gitignore  A069675.nb  A069675_config.h  A069675_extra.h  A069675_gpu_cuda_sieve.cu  A069675_gpu_cuda_sieve.h  A069675_gpu_host_sieve.cpp  A069675_gpu_shared.cpp  A069675_gpu_shared.h  A069675_helper.py  A069675_sieve.cpp  A069675_sieve.h  A069675_tester.cpp  CMakeLists.txt  CudaMake  README.md  WRITEUP.md  resume.sh  sieve_idea.py
A069675/extra/: A069675.py  A069675_parallel.cpp  A069675_sieve.py  b069675_py.txt  graph.py  partial_analysis.py  timing_test.cpp  timing_test.py
A069675/results/: A069675.txt  GCS_log.v32  GCS_log.v96  filter_1_200000.filter  filter_1_200000.partial
(+116 files in other folders)
